[package]
name = "okstd"
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause"
description = "The standard library that's ok"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macros", "argh"]
macros = ["dep:ok_macros"]
argh = ["dep:argh"]

[dependencies]
crc32_digest = "0.8.1"
anyhow = "1.0.81"
base64 = "0.22.0"
crc16 = "0.4.0"
fastvlq = "1.1.1"
futures = "0.3.31"
hex = "0.4.3"
num_cpus = "1.16.0"
ok_macros = { version = "0.2.0", path = "ok_macros", optional = true }

log = "0.4"
colored = "2"
fern = { version = "0.6", features = ["colored"] }
termcolor = "1.4.1"
url = "2.5.0"
argh = { version = "0.1.12", optional = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[workspace]
members = [ "ok_macros"]

[dev-dependencies]
trybuild = "1.0.96"
