[package]
name = "okstd"
version = "2.0.1"
edition = "2021"
license = "BSD-3-Clause"
description = "The standard library that's ok"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macros", "argh"]
macros = ["dep:ok_macros"]
argh = ["dep:argh"]

[dependencies]
crc32_digest = "0.8.1"
anyhow = "1.0.99"
base64 = "0.22.0"
crc16 = "0.4.0"
futures = "0.3.30"
hex = "0.4.3"
num_cpus = "1.17.0"
ok_macros = { version = "2.0.1", path = "ok_macros", optional = true }
url = "2.5.7"
argh = { version = "0.1.12", optional = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio-macros = "2.5.0"

[workspace]
members = [ "ok_macros"]

[dev-dependencies]
trybuild = "1.0.111"
tokio = { version = "1.47.2", features = ["full"] }
