[package]
name = "ok_macros"
version = "0.1.10"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.63", features = ["full", "extra-traits", "visit-mut"] }
quote = "^1"
proc-macro2 = "1.0.3"
