[package]
name = "ok_macros"
version = "2.0.1"
edition = "2021"
license = "BSD-3-Clause"
description = "The standard library that's ok"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.107", features = ["full", "extra-traits", "visit-mut"] }
quote = "^1"
proc-macro2 = "1.0.101"
tokio = { version = "1.47.1", features = ["tokio-macros"], default-features = false }
